# c2cscrape

./: .env.sample  .gitignore  README.md  c2cscrape.py  pyproject.toml  requirements.txt  shell.nix
docker/: DOCKERFILE  docker-compose.yml  dockerfile
src/: c2cscrape.py  main.py  rss.py
