[tool.poetry]
name = "c2cscrape"
version = "0.1.0"
description = "scrape blog site for old c2c am episdodes and serve as rss"
authors = ["Death916 <mail@trentnelson.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.50.0"
bs4 = "^0.0.2"
requests = "^2.32.3"
feedgen = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
